nav and hero change

--- a/style.css
+++ b/style.css
@@ -4,168 +4,161 @@
 html{
     scroll-behavior: smooth;
 }
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    padding-left: 6px;
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 255, 0.658);
-}
-ul{
-    display: flex;
-    align-items: center;
-}
-li{
-    list-style: none;
-    margin: 1.5em;
-    font-size: 1.5rem;
-    font-weight: bold;
-    transition: 0.2s;
-    color: blue;
-}
-li:hover{
-    color: black;
-    cursor: pointer;
-}
-
-@media(max-width:900px){
-  header{
-    display: flex;
-    flex-direction: column;
-  }
-  ul{
-    display: flex;
-    flex-direction: column;
-    line-height: 0%;
-  }
-}
-@media(max-width:300px){
-    header{
-        display: flex;
-        flex-direction: column;
-      }
-}
 #computer{
     color: blue;
-    font-size: 3rem;
-    cursor: default;
+    font-size: 1.8rem;
+    cursor: pointer;
+    font-style: italic;
+    font-weight: bold;
 }
 #accessories{
-    font-size: 1.5rem;
-    cursor: default;
-}
-button{
-    height: 2em;
-    width: 8em;
-    background-color: rgba(0, 0, 255, 0.685);
-    color: white;
-    border: none;
-    box-shadow: 8px 8px 0px 4px black;
-    transition: 0.2s;
-    font-weight: bold;
-    border-radius: 5px;
-}
-button:hover{
-    background-color: blue;
-    box-shadow: -8px -8px 0px 4px black;
+    font-size: 1rem;
     cursor: pointer;
+    font-style: italic;
+    font-weight: bold;
 }
-a{
+.nav-item  a{
+    font-size: 1.2rem !important;
+    margin-left: 1.2em;
+    font-weight: 500;
+    letter-spacing: 2px;
     color: blue;
-    text-decoration: none;
-}
-a:hover{
+ }
+ .nav-item a:hover{
     color: black;
     text-decoration: underline blue;
 }
-#amountcolor{
-    color: blue;
-}
-#container{
-    display: grid;
-    grid-template-columns: repeat(4,0fr);
-    grid-template-rows: repeat(4,0fr);
-    grid-gap: 1em;
-    margin-top: 2em;
-    justify-content: center;
-}
-@media(max-width:1200px){
-    #container{
-        display: grid;
-        grid-template-columns: repeat(3,0fr);
-        grid-template-rows: repeat(4,0fr);
-        grid-gap: 1em;
-        margin-top: 2em;
-        justify-content: center;
+@media(max-width:400px){
+    #computer{
+        color: blue;
+        font-size: 1.5rem;
+        cursor: pointer;
+        font-style: italic;
+        font-weight: bold;
+    }
+    #accessories{
+        font-size: 0.8rem;
+        cursor: pointer;
+        font-style: italic;
+        font-weight: bold;
     }
 }
-@media(max-width:1000px){
-    #container{
-        display: grid;
-        grid-template-columns: repeat(2,0fr);
-        grid-template-rows: repeat(4,0fr);
-        grid-gap: 1em;
-        margin-top: 2em;
-        justify-content: center;
-    }
-}
-@media(max-width:700px){
-    #container{
-        display: grid;
-        grid-template-columns: repeat(1,0fr);
-        grid-template-rows: repeat(4,0fr);
-        grid-gap: 1em;
-        margin-top: 2em;
-        justify-content: center;
-    }
-}
-.itemname{
-    color: blue;
-    margin-bottom: 0%;
-    margin-top: 1em;
-}
-h3{
-    font-weight: lighter ;
-    margin-bottom: 0%;
-}
-h4{
-    margin-top: 0%;
-    color: blue;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-}
-.card{
+/* hero */
+
+.hero{
+    background-color: black;
+    height: 30em;
+    width: 60em !important; 
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    line-height: 1em;
-    height: 20em;
-    width: 20em;
-    box-shadow: 0px 0px 3px 3px rgba(128, 128, 128, 0.295);
-    border-radius: 8px;
-    transition: 0.2s;
+    box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+   border-radius: 16px !important;
 }
-.card:hover{
-       background-color: rgba(128, 128, 128, 0.164);
-       cursor: pointer;
+.carousel-inner{
+    overflow: hidden !important;
+   border-radius: 16px !important;
 }
-footer{
-    display: flex;
-    justify-content: center;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    padding-left: 6px;
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 255, 0.658);
-    margin-top: 2em;
+.h-img{
+    height: 30em !important;
+    width: 60em !important;
+    background-position: center;
+    background-size: cover;
+   border-radius: 16px !important;
+}
+.h-img-1{
+    background-image: url(./her-3.jpg) !important;
+}
+.h-img-2{
+    background-image: url(./hero-2.jpg) !important;
+}
+.h-img-3{
+    background-image: url(./hero-1.jpg) !important;
+}
+@media(max-width:992px){
+    .hero{
+        background-color: black;
+        height: 30em;
+        width: 50em !important; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+       border-radius: 16px !important;
+    }
+    .h-img{
+        height: 30em !important;
+        width: 50em !important;
+        background-position: center;
+        background-size: cover;
+       border-radius: 16px !important;
+    }
+}
+@media(max-width:830px){
+    .hero{
+        background-color: black;
+        height: 25em;
+        width: 40em !important; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+       border-radius: 16px !important;
+    }
+    .h-img{
+        height: 25em !important;
+        width: 40em !important;
+        background-position: center;
+        background-size: cover;
+       border-radius: 16px !important;
+    }
+}
 
+@media(max-width:680px){
+    .hero{
+        background-color: black;
+        height: 22em;
+        width: 30em !important; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+       border-radius: 16px !important;
+    }
+    .h-img{
+        height: 22em !important;
+        width: 30em !important;
+        background-position: center;
+        background-size: cover;
+       border-radius: 16px !important;
+    }
+}
+@media(max-width:500px){
+    .hero{
+        background-color: black;
+        height: 15em;
+        width: 18em !important; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+       border-radius: 16px !important;
+    }
+    .h-img{
+        height: 15em !important;
+        width: 18em !important;
+        background-position: center;
+        background-size: cover;
+       border-radius: 16px !important;
+    }
 }
 
 
-    
-     
+
+
+
+
+
 
 
 
