--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ html{
     .hero{
         background-color: black;
         height: 15em;
-        width: 18em !important; 
+        width: 25em !important; 
         display: flex;
         justify-content: center;
         align-items: center;
@@ -146,6 +146,26 @@ html{
     }
     .h-img{
         height: 15em !important;
+        width: 25em !important;
+        background-position: center;
+        background-size: cover;
+       border-radius: 16px !important;
+    }
+}
+
+@media(max-width:450px){
+    .hero{
+        background-color: black;
+        height: 12em;
+        width: 18em !important; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+       border-radius: 16px !important;
+    }
+    .h-img{
+        height: 12em !important;
         width: 18em !important;
         background-position: center;
         background-size: cover;
