added card data into json format

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ html{
         align-items: center;
         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
        border-radius: 16px !important;
+       margin-top: 2em;
     }
     .h-img{
         height: 22em !important;
@@ -143,6 +144,7 @@ html{
         align-items: center;
         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
        border-radius: 16px !important;
+       margin-top: 2em;
     }
     .h-img{
         height: 15em !important;
@@ -163,6 +165,7 @@ html{
         align-items: center;
         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
        border-radius: 16px !important;
+       margin-top: 2em;
     }
     .h-img{
         height: 12em !important;
@@ -171,6 +174,41 @@ html{
         background-size: cover;
        border-radius: 16px !important;
     }
+}
+/* second section */
+
+#second{
+    height: fit-content;
+    width: 100%;
+    margin-top: 5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.products{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.col{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.col .card{
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    text-align: center;
+    padding: 2% 2%;
+    height: 15rem !important;
+    width: 18rem !important;
+}
+.col img{
+    height: 130px;
+    width: auto;
 }
 
 
