--- a/style.css
+++ b/style.css
@@ -1,248 +1,296 @@
- body{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-}
-html{
-    scroll-behavior: smooth;
-}
-#computer{
-    color: blue;
-    font-size: 1.8rem;
-    cursor: pointer;
-    font-style: italic;
-    font-weight: bold;
-}
-#accessories{
-    font-size: 1rem;
-    cursor: pointer;
-    font-style: italic;
-    font-weight: bold;
-}
-.nav-item  a{
-    font-size: 1.2rem !important;
-    margin-left: 1.2em;
-    font-weight: 500;
-    letter-spacing: 2px;
-    color: blue;
+ body {
+     margin: 0%;
+     padding: 0%;
+     box-sizing: border-box;
  }
- .nav-item a:hover{
-    color: black;
-    text-decoration: underline blue;
-}
-@media(max-width:400px){
-    #computer{
-        color: blue;
-        font-size: 1.5rem;
-        cursor: pointer;
-        font-style: italic;
-        font-weight: bold;
-    }
-    #accessories{
-        font-size: 0.8rem;
-        cursor: pointer;
-        font-style: italic;
-        font-weight: bold;
-    }
-}
-/* hero */
 
-.hero{
-    background-color: black;
-    height: 30em;
-    width: 60em !important; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
-   border-radius: 16px !important;
-   margin-top: 1em;
-}
-.carousel-inner{
-    overflow: hidden !important;
-   border-radius: 16px !important;
-}
-.h-img{
-    height: 30em !important;
-    width: 60em !important;
-    background-position: center;
-    background-size: cover;
-   border-radius: 16px !important;
-}
-.h-img-1{
-    background-image: url(./her-3.jpg) !important;
-}
-.h-img-2{
-    background-image: url(./hero-2.jpg) !important;
-}
-.h-img-3{
-    background-image: url(./hero-1.jpg) !important;
-}
-@media(max-width:992px){
-    .hero{
-        background-color: black;
-        height: 30em;
-        width: 50em !important; 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
-       border-radius: 16px !important;
-    }
-    .h-img{
-        height: 30em !important;
-        width: 50em !important;
-        background-position: center;
-        background-size: cover;
-       border-radius: 16px !important;
-    }
-}
-@media(max-width:830px){
-    .hero{
-        background-color: black;
-        height: 25em;
-        width: 40em !important; 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
-       border-radius: 16px !important;
-    }
-    .h-img{
-        height: 25em !important;
-        width: 40em !important;
-        background-position: center;
-        background-size: cover;
-       border-radius: 16px !important;
-    }
-}
+ html {
+     scroll-behavior: smooth;
+ }
 
-@media(max-width:680px){
-    .hero{
-        background-color: black;
-        height: 22em;
-        width: 30em !important; 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
-       border-radius: 16px !important;
-       margin-top: 2em;
-    }
-    .h-img{
-        height: 22em !important;
-        width: 30em !important;
-        background-position: center;
-        background-size: cover;
-       border-radius: 16px !important;
-    }
-}
-@media(max-width:500px){
-    .hero{
-        background-color: black;
-        height: 15em;
-        width: 25em !important; 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
-       border-radius: 16px !important;
-       margin-top: 2em;
-    }
-    .h-img{
-        height: 15em !important;
-        width: 25em !important;
-        background-position: center;
-        background-size: cover;
-       border-radius: 16px !important;
-    }
-}
+ #computer {
+     color: blue;
+     font-size: 1.8rem;
+     cursor: pointer;
+     font-style: italic;
+     font-weight: bold;
+ }
 
-@media(max-width:450px){
-    .hero{
-        background-color: black;
-        height: 12em;
-        width: 18em !important; 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
-       border-radius: 16px !important;
-       margin-top: 2em;
-    }
-    .h-img{
-        height: 12em !important;
-        width: 18em !important;
-        background-position: center;
-        background-size: cover;
-       border-radius: 16px !important;
-    }
-}
-/* second section */
+ #accessories {
+     font-size: 1rem;
+     cursor: pointer;
+     font-style: italic;
+     font-weight: bold;
+ }
 
-#second{
-    height: fit-content;
+ .nav-item a {
+     font-size: 1.2rem !important;
+     margin-left: 1.2em;
+     font-weight: 500;
+     letter-spacing: 2px;
+     color: blue;
+ }
+
+ .nav-item a:hover {
+     color: black;
+     text-decoration: underline blue;
+ }
+
+ @media(max-width:400px) {
+     #computer {
+         color: blue;
+         font-size: 1.5rem;
+         cursor: pointer;
+         font-style: italic;
+         font-weight: bold;
+     }
+
+     #accessories {
+         font-size: 0.8rem;
+         cursor: pointer;
+         font-style: italic;
+         font-weight: bold;
+     }
+ }
+
+ /* hero */
+
+ .hero {
+     background-color: black;
+     height: 30em;
+     width: 60em !important;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+     border-radius: 16px !important;
+     margin-top: 1em;
+ }
+
+ .carousel-inner {
+     overflow: hidden !important;
+     border-radius: 16px !important;
+ }
+
+ .h-img {
+     height: 30em !important;
+     width: 60em !important;
+     background-position: center;
+     background-size: cover;
+     border-radius: 16px !important;
+ }
+
+ .h-img-1 {
+     background-image: url(./her-3.jpg) !important;
+ }
+
+ .h-img-2 {
+     background-image: url(./hero-2.jpg) !important;
+ }
+
+ .h-img-3 {
+     background-image: url(./hero-1.jpg) !important;
+ }
+
+ @media(max-width:992px) {
+     .hero {
+         background-color: black;
+         height: 30em;
+         width: 50em !important;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+         border-radius: 16px !important;
+     }
+
+     .h-img {
+         height: 30em !important;
+         width: 50em !important;
+         background-position: center;
+         background-size: cover;
+         border-radius: 16px !important;
+     }
+ }
+
+ @media(max-width:830px) {
+     .hero {
+         background-color: black;
+         height: 25em;
+         width: 40em !important;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+         border-radius: 16px !important;
+     }
+
+     .h-img {
+         height: 25em !important;
+         width: 40em !important;
+         background-position: center;
+         background-size: cover;
+         border-radius: 16px !important;
+     }
+ }
+
+ @media(max-width:680px) {
+     .hero {
+         background-color: black;
+         height: 22em;
+         width: 30em !important;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+         border-radius: 16px !important;
+         margin-top: 2em;
+     }
+
+     .h-img {
+         height: 22em !important;
+         width: 30em !important;
+         background-position: center;
+         background-size: cover;
+         border-radius: 16px !important;
+     }
+ }
+
+ @media(max-width:500px) {
+     .hero {
+         background-color: black;
+         height: 15em;
+         width: 25em !important;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+         border-radius: 16px !important;
+         margin-top: 2em;
+     }
+
+     .h-img {
+         height: 15em !important;
+         width: 25em !important;
+         background-position: center;
+         background-size: cover;
+         border-radius: 16px !important;
+     }
+ }
+
+ @media(max-width:450px) {
+     .hero {
+         background-color: black;
+         height: 12em;
+         width: 18em !important;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         box-shadow: 0px 0px 50px 0px rgba(128, 128, 128, 0.381);
+         border-radius: 16px !important;
+         margin-top: 2em;
+     }
+
+     .h-img {
+         height: 12em !important;
+         width: 18em !important;
+         background-position: center;
+         background-size: cover;
+         border-radius: 16px !important;
+     }
+ }
+
+ /* second section */
+
+ #second {
+     height: fit-content;
+     width: 100%;
+     margin-top: 5em;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .products {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .col {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .col .card {
+     text-align: left;
+     padding: 2% 2%;
+     /* height: 15em !important; */
+     width: 18rem !important;
+     transition: 0.6s;
+ }
+
+ .col .card:hover {
+     box-shadow: 2px 0px 20px 2px rgba(128, 128, 128, 0.381);
+     z-index: 9999;
+     cursor: pointer;
+ }
+
+ .col img {
+     height: 130px;
+     width: auto;
+     margin: 0% auto;
+ }
+
+ .col .card a {
+     margin-top: 50em;
+     color: black;
+     text-decoration: none;
+     transition: 0.3s;
+ }
+
+ .col .card a:hover {
+     text-decoration: underline !important;
+     color: #0000EE;
+     ;
+ }
+
+ .col .card h5 {
+     margin-top: 1em;
+     color: black;
+ }
+
+ .view {
+     height: 2.5em;
+     width: 8em;
+     background-color: transparent;
+     border: 2px solid blue;
+     font-weight: bold;
+     letter-spacing: 1px;
+     border-radius: 8px;
+     transition: 0.6s;
+     margin-bottom: 1em;
+ }
+
+ .view:hover {
+     border: 2px solid black;
+     background-color: blue;
+     color: white;
+ }
+
+     #viewless {
+         display: none;
+     }
+
+
+     /* .banner{
+    height: 100vh;
     width: 100%;
-    margin-top: 5em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.products{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.col{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.col .card{
-    text-align: left;
-    padding: 2% 2%;
-    /* height: 15em !important; */
-    width: 18rem !important;
-    transition: 0.6s;
-}
-.col .card:hover{
-    box-shadow: 2px 0px 20px 2px rgba(128, 128, 128, 0.381);
-    z-index: 9999;
-    cursor: pointer;
-}
-.col img{
-    height: 130px;
-    width: auto;
-    margin: 0% auto;
-}
-.col .card a{
-    margin-top: 50em;
-    color: black;
-    text-decoration: none;
-    transition: 0.3s;
-}
-.col .card a:hover{
-    text-decoration: underline !important;
-    color: #0000EE;;
-}
-.col .card h5{
-    margin-top: 1em;
-    color: black;
-}
-#viewless{
-    display: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-
+    background-image: url(./hero-2.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+} */
