--- a/sign up.css
+++ b/sign up.css
@@ -1,172 +1,158 @@
-body{
+body {
     margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    /* overflow: hidden; */
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-header{
+
+#computer {
+    color: blue;
+    font-size: 1.8rem;
+    cursor: pointer;
+    font-style: italic;
+    font-weight: bold;
+}
+
+#accessories {
+    font-size: 1rem;
+    cursor: pointer;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.nav-item a {
+    font-size: 1.2rem !important;
+    margin-left: 1.2em;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: blue;
+}
+
+.nav-item a:hover {
+    color: black;
+    text-decoration: underline blue;
+}
+
+@media(max-width:400px) {
+    #computer {
+        color: blue;
+        font-size: 1.5rem;
+        cursor: pointer;
+        font-style: italic;
+        font-weight: bold;
+    }
+
+    #accessories {
+        font-size: 0.8rem;
+        cursor: pointer;
+        font-style: italic;
+        font-weight: bold;
+    }
+}
+/* signup start */
+#signup-outer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    padding-left: 6px;
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 255, 0.658);
-}
-ul{
-    display: flex;
-    align-items: center;
-}
-li{
-    list-style: none;
-    margin: 1.5em;
-    font-size: 1.5rem;
-    font-weight: bold;
-    transition: 0.2s;
-    color: blue;
-}
-li:hover{
-    color: black;
-    cursor: pointer;
+    height: 80vh;
+    width: 100%;
 }
 @media(max-width:990px){
-    header{
-      display: flex;
-      flex-direction: column;
-    }
-    ul{
-      display: flex;
-      flex-direction: column;
-      line-height: 0%;
-    }
-  }
-  @media(max-width:300px){
-      header{
-          display: flex;
-          flex-direction: column;
-        }
-  }
-#computer{
-    color: blue;
-    font-size: 3rem;
-    cursor: default;
+   #signup-outer{
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+       height: fit-content;
+       width: 100%;
+       gap: 3em;
+       margin-top: 2em;
+       margin-bottom: 2em;
 }
-#accessories{
-    font-size: 1.5rem;
-    cursor: default;
-}
-button{
-    height: 2em;
-    width: 8em;
-    background-color: rgba(0, 0, 255, 0.685);
-    color: white;
-    border: none;
-    box-shadow: 8px 8px 0px 4px black;
-    transition: 0.2s;
-    font-weight: bold;
-    border-radius: 5px;
-}
-button:hover{
-    background-color: blue;
-    box-shadow: -8px -8px 0px 4px black;
-    cursor: pointer;
-}
-section{
-    margin-top: 2em;
-    margin-bottom: 2em;
-}
-#login{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-@media(max-width:1000px){
-    #login{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
+/* body {
+   margin: 0%;
+   padding: 0%;
+   box-sizing: border-box;
+   overflow: visible;
+} */
 }
 .loginpage:nth-child(1){
    text-align: center;
    color: blue;
    font-size: 1.5rem;
 }
-.loginpage:nth-child(2){
-    /* box-shadow: 0px 0px 2px 2px gray; */
-    height: 35em;
-    width: 22em;
-    border-radius: 8px;
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 10px );
-    -webkit-backdrop-filter: blur( 10px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-}
-form{
+form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    line-height: 2.5em;
-    font-weight: bold;
+    gap: 0.8em;
+    box-shadow: 0px 0px 20px 2px gray;
+    height: fit-content;
+    width: 21em;
+    border-radius: 16px;
+    padding: 4% 0%;
 }
-label{
-    font-weight: bold;
-    color: blue;
-}
-input{
-    height: 2.5em;
-    width: 25em;
-    line-height: 1em;
-}
-a{
-    color: blue;
-    text-decoration: none;
-}
-a:hover{
-    color: black;
-    text-decoration: underline blue;
-}
+ input {
+     height: 2.5em;
+     width: 18em;
+    border-radius: 8px;
+    border: 2px solid black;
+ }
 select{
-    height: 3em;
-    width: 25.5em;
+    height: 2.5em;
+    width: 18em;
+    border: 2px solid black;
+    border-radius: 8px;
 }
-footer{
-    font-weight: bold;
-    text-align: center;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 255, 0.658);
-    padding-bottom: 8px;
-    padding-top: 8px;
-    line-height: 1em;
+@media(max-width:400px){
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 0.8em;
+        box-shadow: 0px 0px 20px 2px gray;
+        height: fit-content;
+        width: 18em;
+        border-radius: 16px;
+        padding: 4% 0%;
+    }
+    input {
+        height: 2.5em;
+        width: 16em;
+       border-radius: 8px;
+       border: 2px solid black;
+    }
+    select{
+        height: 2.5em;
+        width: 16em;
+        border: 2px solid black;
+       border-radius: 8px;
+    }
 }
-#signupbutton{
-    height: 2em;
+#signup-btn{
+    height: 2.5em;
     width: 8em;
-    background-color: rgba(0, 0, 255, 0.685);
-    color: white;
-    border: none;
-    box-shadow: 8px 8px 0px 4px black;
-    transition: 0.2s;
+    background-color: transparent;
+    border: 2px solid blue;
     font-weight: bold;
-    border-radius: 5px;
-    margin-top: 2em;
+    letter-spacing: 1px;
+    border-radius: 8px;
+    transition: 0.6s;
+    margin-top: 0%;
 }
-#signupbutton:hover{
+#signup-btn:hover{
+    border: 2px solid black;
     background-color: blue;
-    box-shadow: -8px -8px 0px 4px black;
-    cursor: pointer;
+    color: white;
 }
-footer{
-    display: flex;
-    justify-content: center;
-    border-top-right-radius: 30px;
-    border-top-left-radius: 30px;
-    padding-left: 6px;
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 255, 0.658);
-    margin-top: 2em;
+.error{
+    color: red !important;
+    padding: 0%;
+    margin: 0%;
 }
