--- a/login.css
+++ b/login.css
@@ -53,7 +53,8 @@
          font-weight: bold;
      }
  }
-/* login start */
+
+ /* login start */
  #login-outer {
      display: flex;
      justify-content: space-between;
@@ -61,92 +62,107 @@
      height: 90vh;
      width: 100%;
  }
-@media(max-width:990px){
-    #login-outer{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: fit-content;
-        width: 100%;
-        gap: 3em;
-        margin-top: 2em;
-        margin-bottom: 2em;
-}
-body {
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    overflow: visible;
-}
-} 
+
+ @media(max-width:990px) {
+     #login-outer {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         height: fit-content;
+         width: 100%;
+         gap: 3em;
+         margin-top: 2em;
+         margin-bottom: 2em;
+     }
+
+     body {
+         margin: 0%;
+         padding: 0%;
+         box-sizing: border-box;
+         overflow: visible;
+     }
+ }
+
  .loginpage:nth-child(1) {
      text-align: center;
      line-height: 1.5em;
      color: blue;
      font-size: 1.5rem;
  }
+
  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.8em;
-    box-shadow: 0px 0px 20px 2px gray;
-    height: 21em;
-    width: 21em;
-    border-radius: 16px;
-}
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     gap: 0.8em;
+     box-shadow: 0px 0px 20px 2px gray;
+     height: fit-content;
+     width: 21em;
+     border-radius: 16px;
+     padding: 5% 0%;
+ }
+
  input {
      height: 2.5em;
      width: 18em;
-    border-radius: 8px;
-    border: 2px solid black;
+     border-radius: 8px;
+     border: 2px solid black;
  }
- @media(max-width:400px){
-    form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 0.8em;
-        box-shadow: 0px 0px 20px 2px gray;
-        height: 21em;
-        width: 18em;
-        border-radius: 16px;
-    }
-    input {
-        height: 2.5em;
-        width: 16em;
-       border-radius: 8px;
-       border: 2px solid black;
-    }
-}
-form a {
+
+ @media(max-width:400px) {
+     form {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         gap: 0.8em;
+         box-shadow: 0px 0px 20px 2px gray;
+         height: fit-content;
+         width: 18em;
+         border-radius: 16px;
+         padding: 5% 0%;
+
+     }
+
+     input {
+         height: 2.5em;
+         width: 16em;
+         border-radius: 8px;
+         border: 2px solid black;
+     }
+ }
+
+ form a {
      color: blue;
      text-decoration: underline;
  }
-form a:hover {
+
+ form a:hover {
      color: black;
      text-decoration: underline;
  }
- #login-btn{
-    height: 2.5em;
-    width: 8em;
-    background-color: transparent;
-    border: 2px solid blue;
-    font-weight: bold;
-    letter-spacing: 1px;
-    border-radius: 8px;
-    transition: 0.6s;
+
+ #login-btn {
+     height: 2.5em;
+     width: 8em;
+     background-color: transparent;
+     border: 2px solid blue;
+     font-weight: bold;
+     letter-spacing: 1px;
+     border-radius: 8px;
+     transition: 0.6s;
  }
- #login-btn:hover{
-    border: 2px solid black;
-    background-color: blue;
-    color: white;
+
+ #login-btn:hover {
+     border: 2px solid black;
+     background-color: blue;
+     color: white;
  }
- .error{
-    color: red !important;
-    padding: 0%;
-    margin: 0%;
-}
+
+ .error {
+     color: red !important;
+     padding: 0%;
+     margin: 0%;
+ }
